--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -5,7 +5,7 @@
 		url('/fonts/protomono-semibold.woff') format('woff');
 	font-weight: 600;
 	font-style: normal;
-	font-display: swap;
+	font-display: block;
 }
 
 @font-face {
