feat: gray text

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -220,7 +220,7 @@ const { content, imagePosition = 'right', size = 'medium' } = Astro.props;
 		font-family: 'Suisse Intl', sans-serif;
 		font-size: 0.875rem;
 		font-weight: 400;
-		color: #666;
+		color: #46545f;
 		text-align: left;
 		margin: 0;
 		line-height: 1.3125;
