--- a/src/components/ScrollIndicator.astro
+++ b/src/components/ScrollIndicator.astro
@@ -10,7 +10,7 @@
 		top: 1rem;
 		right: 1.5rem;
 		z-index: 1000;
-		color: #000000;
+		color: #46545f;
 		font-size: 1rem;
 		font-family: 'ProtoMono', sans-serif;
 		font-weight: 600;
