--- a/src/components/ScrollIndicator.astro
+++ b/src/components/ScrollIndicator.astro
@@ -10,7 +10,8 @@
 		top: 1rem;
 		right: 1.5rem;
 		z-index: 50;
-		color: #46545f;
+		color: #5b6872;
+		opacity: 0.5;
 		font-size: 1rem;
 		font-family: 'ProtoMono', sans-serif;
 		font-weight: 600;
